# sentinel_solana_v1

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  Surfpool.toml  local_deployment_guide.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pre_pusd_migration.md  render.yaml
.claude/commands/: commit.md  plan-phase.md  prime.md  start-phase.md
.claude/skills/aero-api/: SKILL.md
.claude/skills/git/: SKILL.md
.github/workflows/: ci.yml
acurast/: .env.example  README.md  acurast.json  package.json  tsconfig.json  webpack.config.js
acurast/src/jobs/: classifier.ts  fetcher.ts  repricer.ts  settler.ts
acurast/src/lib/: aeroapi.ts  agent.ts  anchor.ts  grok.ts  pdas.ts  rpc.ts  std.ts  tx.ts
acurast/src/lib/ix/: controller.ts  governance.ts  oracle.ts
agent/: README.md
agent/app/: main.py
agent/artifacts/: encoder.joblib  feature_names.json  model.joblib  model_version.txt
agent/training/: model_1.ipynb  train.py
contracts/: Anchor.toml  Cargo.toml  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
contracts/programs/controller/: Cargo.toml
contracts/programs/controller/src/: lib.rs
contracts/programs/flight_pool/: Cargo.toml
contracts/programs/flight_pool/src/: lib.rs
contracts/programs/governance/: Cargo.toml
contracts/programs/governance/src/: lib.rs
contracts/programs/oracle_aggregator/: Cargo.toml
contracts/programs/oracle_aggregator/src/: lib.rs
contracts/programs/vault/: Cargo.toml
contracts/programs/vault/src/: lib.rs
contracts/tests/: controller.test.ts  flight_pool.test.ts  governance.test.ts  integration.test.ts  oracle_aggregator.test.ts  setup.ts  smoke.test.ts  vault.test.ts
contracts/tests/integration/: e2e-with-crons-deployed.test.ts  full-flow-deployed.test.ts  surfpool.test.ts
contracts/tests/lib/: web3compat.ts
deployments/: devnet-latest.json  surfpool-latest.json
design_system/: app.jsx  data.jsx  fun-mode.css  index.html  page-buy.jsx  page-globe.jsx  page-landing.jsx  page-positions.jsx  page-vault.jsx  shell.jsx
executor/: .env.example  Dockerfile  package.json  tsconfig.json  vitest.config.ts
executor/src/: index.ts  server.ts
executor/src/backends/cron/: health.ts  index.ts
executor/src/core/: aeroapi_client.ts  agent_client.ts  decide_route_actions.ts  flight_classifier.ts  flight_data_fetcher.ts  grok_client.ts  route_repricer.ts  run_log.ts  settlement_executor.ts  solana_client.ts  types.ts
executor/src/lib/: client.ts
executor/src/scripts/: run-classifier.ts  run-cron.ts  run-fetcher.ts  run-repricer.ts  run-settler.ts
executor/src/test/: mock_aero_api.ts
executor/tests/: aeroapi_client.test.ts  aeroapi_error_envelope.test.ts  decide_classifier_batches.test.ts  decide_fetcher_actions.test.ts  decide_route_actions.test.ts  decide_settlement_batches.test.ts  grok_client.test.ts
frontend/: package.json  playwright.config.ts  tsconfig.json
frontend/app/: Chrome.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: page.tsx
frontend/app/buy/: page.tsx
frontend/app/crons/: page.tsx
frontend/app/earn/: page.tsx
frontend/app/faucet/: page.tsx
frontend/app/markets/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/app/presentation/: page.tsx
frontend/app/quant/: page.tsx
frontend/public/presentation/: slides.html
frontend/src/components/: BottomNav.tsx  ModeToggle.tsx  MonteCarloSimulator.tsx  RiskBar.tsx  Sidebar.tsx  Toast.tsx  Topbar.tsx  WalletButton.tsx
frontend/src/config/: devnet.ts
frontend/src/data/: index.ts  mock.ts  onchain.ts  types.ts
frontend/src/lib/: ata.ts  cron-keypair.ts  cron-runs.ts  executor-proxy.ts  monteCarlo.ts  pusd.ts  rpc.ts  sendTx.ts  txEvents.ts  usdc.ts  useUsdcBalance.ts  vault-math.ts
frontend/src/theme/: ThemeProvider.tsx
frontend/src/theme/fun/: copy.ts  (+2 more)
frontend/tests/e2e/: 00-smoke-connect.spec.ts  01-faucet-mint.spec.ts  02-earn-deposit.spec.ts  03-buy-coverage.spec.ts  04-portfolio-policy.spec.ts  10-flight-on-time.spec.ts  11-flight-delayed.spec.ts  12-flight-cancelled.spec.ts
frontend/tests/helpers/: buyFlight.ts  connectWallet.ts  cronTick.ts  mintFromFaucet.ts  waitForBurst.ts
frontend/tests/wallet-setup/: basic.setup.ts
keys/: README.md  devnet-deployer.pubkey  devnet-keeper.pubkey  devnet-oracle.pubkey  executor.pubkey  mock-pusd-authority.pubkey  mock-pusd.pubkey  mock-usdc-authority.pubkey  mock-usdc.pubkey  surfpool-keeper.pubkey  surfpool-oracle.pubkey
keys/test-actors/: buyer-a.pubkey  buyer-b.pubkey  buyer-c.pubkey  investor-a.pubkey  investor-b.pubkey
pitch/: README.md  deck.md  memo.md  slides.html
reference/: README.md
reference/ai/: Dockerfile  README.md  requirements.txt
reference/ai/app/: main.py
reference/ai/tests/: test_price.py
reference/ai/training/: train.py
reference/frontend/: README.md  next.config.ts
reference/frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: bootstrap-e2e.ts  bootstrap-test-actors.ts  deploy.ts  dev-surfpool.sh  fund-pusd.ts  fund-sol.ts  fund-usdc.ts  gen-clients.ts  install-toolchain.sh  keys-bootstrap.sh  repair-controller-oracle.ts  rotate-keeper.ts  rotate-oracle.ts  run.sh  seed-routes.ts  sync-idl.sh
spec/: agent_governance_report.md  architecture.md  dev_steps.md  learn_solana.md  oracle_aeroapi_report.md  progress.md  workflow.md
spec/phases/: phase-00-project-bootstrap.md  phase-01-governance-program.md  phase-02-vault-program.md  phase-03-flight-pool-program.md  phase-04-oracle-aggregator-program.md  phase-05-controller-program.md  phase-06-cross-program-integration-tests.md  phase-07-devnet-deployment.md  phase-08-oracle-cron.md  phase-09-classifier-cron.md  phase-10-settlement-cron.md  phase-11-e2e-cron-validation.md  phase-12-frontend-bootstrap.md  phase-13-frontend-admin.md  phase-14-frontend-underwriter.md  phase-15-frontend-traveler.md  phase-16-e2e-test.md  phase-17-cron-control-panel.md  phase-18-fetcher-oracle-centralized.md  phase-22-premium-pricing-agent.md  phase-23-route-repricer-cron.md  phase-24-token2022-pusd.md  phase-25-cron-executor-render.md
(+37 files in other folders)
