[package]
name = "controller"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel controller program — orchestration: buy/classify/settle. Reads oracle FlightData; CPIs to governance, vault, flight_pool, oracle_aggregator."

[lib]
crate-type = ["cdylib", "lib"]
name = "controller"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
