[package]
name = "flight_pool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel flight_pool program — per-flight pool registry, buyer records, shared treasury, claim/sweep, recovery accounting."

[lib]
crate-type = ["cdylib", "lib"]
name = "flight_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
