[package]
name = "flight_pool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel flight_pool program — per-flight pool registry, buyer records, shared treasury, claim/sweep, recovery accounting."

[lib]
crate-type = ["cdylib", "lib"]
name = "flight_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
# `init-if-needed` enabled for consistency with Phase 2 (D13). flight_pool
# itself uses strict `init` for `FlightPool` and `BuyerRecord` (D5/D6) —
# re-purchase / re-register reverts via PDA collision.
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }

[lints]
workspace = true
