[package]
name = "governance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel governance program — route registry, terms, admin whitelist."

[lib]
crate-type = ["cdylib", "lib"]
name = "governance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
# Anchor / Solana cfg flags emitted by derive macros — see workspace lints.
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
# `init-if-needed` is required for Phase 1 idempotent re-activation of
# `RouteAccount` and `AdminRecord` (see spec/phases/phase-01-governance-program.md
# §D4). Risk is bounded: identity fields are seed-derived (immutable) and the
# only mutable state is bools / Option<u64>; auth is owner / active-admin only.
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[lints]
workspace = true
