[package]
name = "vault"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel vault program — capital pool, share token, withdrawal queue, snapshots."

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
