[package]
name = "vault"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinel vault program — capital pool, share token, withdrawal queue, snapshots."

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
# `init-if-needed` enables idempotent `ClaimableBalance` PDA creation in
# `request_withdrawal` (one PDA per underwriter, seed-bound). See Phase 2
# §D5; the same risk profile as Phase 1 §D4 — seed-immutable identity, only
# mutable state is `amount: u64`, auth is the request owner.
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }

[lints]
workspace = true
